# hyperzion

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
cmake/Modules/: FindGLFW.cmake  FindOpenGL.cmake  FindPhysFS.cmake
data/models/ship/: accent.mat  accent2.mat  base.hzm  base.mat
data/shaders/: default.fs  default.vs
src/: CMakeLists.txt  config.h.in  revision.cmake  shared.hpp  shared.hxx
src/client/: CMakeLists.txt  client.cpp  client.hpp  event.cpp  event.hpp
src/common/: CMakeLists.txt  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp
src/game/: CMakeLists.txt  game.cpp  game.cxx  game.hpp  glad.c  glad.h  main.cxx  renderer.cxx  renderer.hxx  ship.cpp  ship.hpp
src/main/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  glad.cpp  glad.h  material.cpp  material.hpp  model.cpp  model.hpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp  texture.cpp  texture.hpp  vbo.cpp  vbo.hpp
tools/: io_export_hzm.py
